Added death panel

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <br> (W = Up, A = Left, S = Down, D = Right , SPACE = Jump, MOUSE = Look around);
         </div>
     </div>
+       <div>
+        <canvas id="canvas"></canvas>
+    </div>
     <!-- JavaScript Section -->
     <script src="Scripts/lib/EaselJS/lib/easeljs-0.8.2.min.js"></script>
     <script src="Scripts/lib/TweenJS/lib/tweenjs-0.6.2.min.js"></script>
